--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "react-lazy-load-image-component": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
