--- a/package.json
+++ b/package.json
@@ -25,18 +25,19 @@
     "react-global-configuration": "^1.4.0",
     "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
+    "react-lazy-load-image-component": "^1.5.0",
     "react-redux": "^7.2.0",
     "react-redux-notify": "^4.2.1",
     "react-render-html": "^0.6.0",
+    "react-responsive-carousel": "^3.2.10",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.3",
-    "react-slick": "^0.26.1",
+    "react-slick": "^0.27.12",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "slick-carousel": "^1.8.1",
-    "react-lazy-load-image-component": "^1.5.0"
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
