--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.12",
+    "react-social-login": "^3.4.10",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
