--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "socket.io": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
