--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/date-fns": "^2.6.0",
     "axios": "^0.19.2",
+    "base-64": "^1.0.0",
     "bootstrap": "^4.5.3",
     "date-fns": "^2.16.1",
     "react": "^16.13.1",
@@ -39,7 +40,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "slick-carousel": "^1.8.1",
-    "socket.io": "^3.0.1"
+    "socket.io-client": "^2.3.0",
+    "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
