--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.16.1",
     "react": "^16.13.1",
     "react-add-to-calendar": "^0.1.5",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^1.3.0",
     "react-content-loader": "^5.1.0",
     "react-copy-to-clipboard": "^5.0.2",
@@ -26,6 +27,7 @@
     "react-global-configuration": "^1.4.0",
     "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
+    "react-image-lightbox": "^5.1.1",
     "react-lazy-load-image-component": "^1.5.0",
     "react-paypal-express-checkout": "^1.0.5",
     "react-player": "^2.7.0",
