--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
+    "react-multi-lang": "^1.0.7",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^2.3.0",
     "utf8": "^3.0.0"
